# management-ui

./: .gitignore  README.md  pyproject.toml
src/management_ui/: __init__.py
src/management_ui/static/: app.js  index.html  styles.css
