[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "management-ui"
version = "0.1.0"
description = "Operator management UI static assets; consumed by control-plane"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
management_ui = ["static/*", "static/**/*"]
